force-app/main/default/objects/Compliance_Report__c/Compliance_Report__c.object-meta.xml
<CustomObject>
    <label>Compliance Report</label>
    <pluralLabel>Compliance Reports</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CRP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores compliance reports for regulatory frameworks including SOX, HIPAA, GDPR, and PCI</description>
</CustomObject>