force-app/main/default/objects/Compliance_Report__c/fields/Approval_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Approval_Coverage_Pct__c</fullName>
    <label>Approval Coverage Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>