force-app/main/default/objects/Compliance_Report__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <label>Generated By</label>
    <type>Text</type>
    <length>255</length>
</CustomField>