force-app/main/default/objects/Compliance_Report__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <label>Period End</label>
    <type>Date</type>
</CustomField>