force-app/main/default/objects/Compliance_Report__c/fields/Report_Data__c.field-meta.xml
<CustomField>
    <fullName>Report_Data__c</fullName>
    <label>Report Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>