force-app/main/default/objects/Compliance_Report__c/fields/Test_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Test_Coverage_Pct__c</fullName>
    <label>Test Coverage Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>