force-app/main/default/objects/Compliance_Report__c/fields/Total_Changes__c.field-meta.xml
<CustomField>
    <fullName>Total_Changes__c</fullName>
    <label>Total Changes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>