force-app/main/default/objects/Compliance_Report__c/fields/Total_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Total_Deployments__c</fullName>
    <label>Total Deployments</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>