force-app/main/default/objects/Compliance_Report__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SOX</fullName><default>false</default><label>SOX</label></value>
            <value><fullName>HIPAA</fullName><default>false</default><label>HIPAA</label></value>
            <value><fullName>GDPR</fullName><default>false</default><label>GDPR</label></value>
            <value><fullName>PCI</fullName><default>false</default><label>PCI</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>